plotted gngu over randomly generated distributions

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.3 64-bit",
-   "display_name": "Python 3.8.3 64-bit",
+   "name": "Python 3.8.3 64-bit ('pyconrl-env': conda)",
+   "display_name": "Python 3.8.3 64-bit ('pyconrl-env': conda)",
    "metadata": {
     "interpreter": {
      "hash": "0b1e480186f336184937ead83e4835efea9f5a384ed1a355480481c093d1f126"
@@ -28,17 +28,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -46,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,64 +118,64 @@
      "text": [
       "Iteration:  100\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 10 vertices and 19 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 10 vertices and 19 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  200\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 20 vertices and 42 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 20 vertices and 42 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  300\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 30 vertices and 70 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 30 vertices and 70 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  400\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 40 vertices and 98 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 40 vertices and 98 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  500\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 50 vertices and 131 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 50 vertices and 131 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  600\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 60 vertices and 162 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 60 vertices and 162 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  700\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 70 vertices and 192 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 70 vertices and 192 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  800\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 80 vertices and 222 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 80 vertices and 222 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  900\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 90 vertices and 260 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 90 vertices and 260 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1000\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 302 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 302 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1100\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 317 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 317 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1200\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 333 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 333 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1300\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 346 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 346 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1400\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 363 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 363 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1500\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 378 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 378 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1600\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 388 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 388 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1700\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 398 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 398 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1800\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 403 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 403 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  1900\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 408 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n",
+      "<Graph object, undirected, with 100 vertices and 408 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n",
       "Iteration:  2000\n",
       "Graph properties: \n",
-      "<Graph object, undirected, with 100 vertices and 413 edges, 4 internal vertex properties, 1 internal edge property, at 0x7fc7946954c0>\n"
+      "<Graph object, undirected, with 100 vertices and 413 edges, 4 internal vertex properties, 1 internal edge property, at 0x7f90a473ffd0>\n"
      ]
     }
    ],
@@ -196,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -216,11 +208,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<VertexPropertyMap object with value type 'vector<double>', for Graph 0x7fc7946954c0, at 0x7fc794687490>"
+       "<VertexPropertyMap object with value type 'vector<double>', for Graph 0x7f90a473ffd0, at 0x7f90a47378b0>"
       ]
      },
      "metadata": {},
-     "execution_count": 174
+     "execution_count": 7
     }
    ],
    "source": [
@@ -229,18 +221,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0, 20, 100)\n",
+    "plt.plot(x, np.sin(x))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc7946af9d0>"
+       "<matplotlib.collections.PathCollection at 0x7f902d56d340>"
       ]
      },
      "metadata": {},
-     "execution_count": 176
+     "execution_count": 10
     }
    ],
    "source": [
