--- a/notebooks/qlearning_test/q_gridworld.ipynb
+++ b/notebooks/qlearning_test/q_gridworld.ipynb
@@ -69,6 +69,13 @@
    ]
   },
   {
+   "source": [
+    "## QLearning GridWorld"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
