--- a/notebooks/conrl_test/conrl_gridworld.ipynb
+++ b/notebooks/conrl_test/conrl_gridworld.ipynb
@@ -495,6 +495,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [
@@ -596,7 +603,21 @@
      }
     }
    ],
-   "source": []
+   "source": [
+    "x_range = y_range = np.arange(0, 8)\n",
+    "X, Y = np.meshgrid(x_range, y_range)\n",
+    "\n",
+    "fig = plt.figure(figsize=(8, 8))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "surf = ax.plot_surface(X, Y, actions.reshape((4,4)), rstride=1, cstride=1, vmin=-1.0, vmax=1.0)\n",
+    "ax.set_zlabel('Action')\n",
+    "ax.set_title(\"Best action to state space\")\n",
+    "ax.view_init(ax.elev, -120)\n",
+    "fig.colorbar(surf)\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
