--- a/notebooks/qlearning_test/q_mountaincar.ipynb
+++ b/notebooks/qlearning_test/q_mountaincar.ipynb
@@ -177,7 +177,7 @@
     "state_size = (10, 10)\n",
     "window_size = (env.observation_space.high - env.observation_space.low)/state_size\n",
     "\n",
-    "state_grid = create_discretization(env.observation_space.low, env.observation_space.high)\n",
+    "state_grid = create_discretization_grid(env.observation_space.low, env.observation_space.high)\n",
     "samples = np.array([env.observation_space.sample() for i in range(10)])\n",
     "discretized_samples = np.array([get_discrete_state(sample, window_size, env) for sample in samples])\n",
     "\n",
@@ -190,23 +190,6 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "<class 'gym.wrappers.time_limit.TimeLimit'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(env))"
-   ]
   },
   {
    "cell_type": "code",
